# trender

./: .gitattributes  .gitignore
app/: README.md  next.config.js  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/admin/: page.tsx
app/app/api/event/create-log/: route.ts
app/app/api/event/get-logs/: route.ts
app/app/api/post/create/: route.ts
app/app/api/post/get-all/: route.ts
app/app/api/post/get-by-user/: route.ts
app/app/api/trades/get-data/: route.ts
app/app/api/trades/get-trade-orders/: route.ts
app/app/create/: page.tsx
app/app/dashboard/: page.tsx
app/app/trending/: page.tsx
app/components/: content-with-links.tsx  link-preview.tsx  navbar.tsx  post-card.tsx  stats-bar.tsx  trade-modal.tsx  tradingChart.tsx
app/contexts/: PostsContext.tsx
app/lib/: config.ts
app/prisma/: schema.prisma
app/prisma/migrations/20251025103626_init/: migration.sql
app/prisma/migrations/20251026083605_orders_table_added/: migration.sql
app/prisma/migrations/20251029135744_added_image_option_in_create_post_form/: migration.sql
app/types/: types.ts
app/utils/: anchorClient.ts  linkDetector.ts  smartcontractHandlers.ts  transactionHelpers.ts  trender_program.json  uploader.ts
trender-contract/: Anchor.toml  package-lock.json  package.json
trender-contract/programs/trender/: Cargo.toml
trender-contract/programs/trender/src/: lib.rs
trender-contract/tests/: trender.ts
